Refactor: login.html

--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -10,7 +10,7 @@
 <!--    <div>-->
 <!--        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/logo.png" class="w-[250px] h-[250px]">-->
 <!--    </div>-->
-    <div class="flex flex-1 h-full">
+    <div class="flex flex-1 mt-20 h-full">
         <form th:action method="POST" class="flex flex-col justify-1/2 items-center w-full mt-20" onsubmit="LoginForm__submit(this); return false;">
             <div class="w-full p-5 md:w-[30rem]">
                 <p class="text-[25px]">로그인</p>
@@ -36,20 +36,6 @@
                     <button id="btn-join-1" class="btn btn-md btn-accent gap-3 border-none" style="background-color: #03fa6e;">
                         <span class="text-black" style="font-size: 17px;">로그인</span>
                     </button>
-
-<!--                    <div class="flex justify-center mt-[40px]">-->
-<!--                        <label class="label">-->
-<!--                            <span class="text-gray-400">SNS로 로그인 하기</span>-->
-<!--                        </label>-->
-<!--                    </div>-->
-
-<!--                    <div class="flex justify-center items-center mt-10">-->
-<!--                        <div class="border-t flex-grow border-gray-300 border-opacity-50"></div>-->
-<!--                        <label class="label mx-4">-->
-<!--                            <span class="text-gray-400">SNS로 로그인 하기</span>-->
-<!--                        </label>-->
-<!--                        <div class="border-t flex-grow border-gray-300 border-opacity-50"></div>-->
-<!--                    </div>-->
 
                     <div class="flex justify-center items-center mt-10">
                         <div class="border-t flex-grow border-gray-300 border-opacity-50"></div>
