--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -11,15 +11,15 @@
     <!--        <img src="https://kr.object.ncloudstorage.com/devchall/devchall_img/logo.png" class="w-[250px] h-[250px]">-->
     <!--    </div>-->
     <div class="flex flex-1">
-        <form th:action method="POST" class="flex flex-col justify-center items-center w-full mt-15" onsubmit="JoinForm__submit(this); return false;">
-            <div class="w-full p-5 lg:w-[30rem]">
+        <form th:action method="POST" class="flex flex-col justify-center items-center w-full" onsubmit="JoinForm__submit(this); return false;">
+            <div class="w-full lg:w-[30rem]">
                 <p class="text-[25px]">회원가입</p>
-                <div class="flex flex-col gap-4 justify-center lg:flex-row" th:object="${memberDto}">
+                <div class="flex flex-col gap-2 justify-center lg:flex-row" th:object="${memberDto}">
                     <div class="flex flex-col space-y-0.1 flex-1">
                         <div>
                             <div class="w-full">
                                 <label class="label">
-                                    <span class="text-gray-400 mt-3">아이디를 입력해주세요</span>
+                                    <span class="text-gray-400 mt-2">아이디를 입력해주세요</span>
                                 </label>
                                 <input type="text" th:field="*{loginID}" maxlength="16" placeholder="아이디" class="input input-bordered w-full text-black" id="loginID" autofocus />
                                 <span th:style="${'color: red; font-size:12px;'}" th:text="${valid_loginID}"></span>
