--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -32,6 +32,11 @@
                 alert("신고를 취소합니다.");
             }
         }
+
+        function showDuplicateReportAlert() {
+            alert("이미 신고한 게시물입니다.");
+        }
+
     </script>
 
 
