--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
                         class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                     <a th:href="|/usr/challenge/detail/${joinChallenge.id}|">
                         <figure class="pt-5">
-                            <img th:src="${joinChallenge.challengePhoto.getSmallPhoto()}" alt="Shoes" class="rounded-xl w-[90%]" />
+                            <img th:src="${@photoService.getSmallPhoto(joinChallenge.challengePhoto)}" alt="Shoes" class="rounded-xl w-[90%]" />
                         </figure>
                     </a>
 
@@ -134,7 +134,7 @@
                             <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                                 <a th:href="|/usr/challenge/detail/${challenge.id}|">
                                     <figure class="pt-5">
-                                        <img th:src="${challenge.challengePhoto.getSmallPhoto()}" alt="Challenge_img" class="rounded-xl w-[90%]" />
+                                        <img th:src="${@photoService.getSmallPhoto(challenge.challengePhoto)}" alt="Challenge_img" class="rounded-xl w-[90%]" />
                                     </figure>
                                 </a>
 
