--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -24,7 +24,7 @@
 
     <div class="flex w-full mt-10 mx-100 justify-center">
         <div class="mx-2 mt-9">
-            <img th:src="${challenge.challengePhoto.getLargePhoto()}" alt="challenge_image" class="w-[85%] h-auto"/>
+            <img th:src="${@photoService.getLargePhoto(challenge.challengePhoto)}" alt="challenge_image" class="w-[85%] h-auto"/>
         </div>
             <div class="w-1/3">
                 <div class="flex justify-between">
@@ -122,7 +122,7 @@
                                 <div th:each="post : ${challengePostList}">
                                     <div class="card w-[200px] shadow-xl mx-8">
                                         <figure>
-                                            <img th:src="${post.postPhoto.getSmallPhoto()}" alt="post_image"
+                                            <img th:src="${@photoService.getSmallPhoto(post.postPhoto)}" alt="post_image"
                                                  class="rounded-xl w-[80%] mt-8"/>
                                         </figure>
                                         <div class="card-body">
